<resources>
    <string name="app_name">Petspital</string>
    <string name="loading">병원정보를 가져오는 중입니다...</string>
    <string name="hosp_title">병원명 : </string>
    <string name="hosp_address">주소 : </string>
    <string name="hosp_tel">번호 : </string>
    <string name="search">검색</string>
    <string name="searchHint">병원명 검색..</string>


    <string name="fragment1Title">병원 리스트</string>
    <string name="fragment2Title">자유게시판</string>


    <string name="loginGuest">게스트</string>


    <string-array name="spinner_gugun">
        <item>전체</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>울주군</item>
        <item>중구</item>
    </string-array>
</resources>