<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progress_Loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:visibility="gone"
        android:id="@+id/textview_Loading"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/loading"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress_Loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linearLayout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="10"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView_HospList_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/nanumsquare"
            android:text="@string/fragment1Title"
            tools:text="병원리스트" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <Spinner

                android:id="@+id/spinnerGugun"
                android:layout_weight="3.5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <EditText
                android:id="@+id/editText_Keyword"
                android:hint="@string/searchHint"
                android:fontFamily="@font/nanumsquare"
                android:layout_weight="2.5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/search"
                android:fontFamily="@font/nanumsquare"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/HosprecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>